# 2021RM-OPENCV-Advanced

./: CMakeLists.txt  README.md  main.cpp
Examination/: README.md  main.cpp
exam_solve_lby_zzh_zcy/: CMakeLists.txt  main.cpp  process.hpp
solve1/: CMakeLists.txt  main.cpp
task 1/: CMakeLists.txt  README.md  detect.cpp  main.cpp
tzx/Camera_Calibration/: CMakeLists.txt  in_VID5.xml
tzx/Examination/: CMakeLists.txt  detect.hpp  main.cpp  out_camera_data.xml  readParameter.hpp  solve.hpp  start.sh
tzx/task 1/: main.cpp
